* fix 'image file size too large' label from showing up too far down from the file input it's connected to

--- a/dapp/src/assets/sass/_progress.scss
+++ b/dapp/src/assets/sass/_progress.scss
@@ -12,6 +12,7 @@
   border-radius: 2px;
   height: 10px;
   margin-top: 6px;
+  margin-bottom: 0;
   transition: opacity 1s ease-in-out;
 }
 
